fix: grid and flex  gaps, adjust margins and paddings for layout consistency

--- a/styles/tickets_section.css
+++ b/styles/tickets_section.css
@@ -173,7 +173,6 @@ input[type="radio"] {
     background-position: center;
     height: 400px;
     overflow: hidden;
-    transition: transform 0.3s ease;
 }
 
 #img-parallax:hover {
